# MatrixExplorer

./: CMakeLists.txt  CMakePresets.json  MatrixExplorer.cpp  MatrixExplorer.h  README.md  matrix.cpp  matrix.h  print.cpp  rational.cpp  rational.h  rows.cpp
HulaScript/: CMakeLists.txt
HulaScript/include/: HulaScript.h  error.h  ffi.h  hash.h  repl_completer.h  source_loc.h  table_iterator.h  tokenizer.h
HulaScript/parallel_hashmap/: phmap.h
HulaScript/src/: compiler.cpp  ffi_table_helper.cpp  for_loops.cpp  fstdlib.cpp  garbage_collector.cpp  interpreter.cpp  operators.cpp  print.cpp  runner.cpp  tokenizer.cpp
examples/: mat-test.expl  regression.expl
